# ShellFun

./: .gitignore  CMakeLists.txt
cmake/: libshell.cmake
data_processing/: log.txt  mesh_stats.py  parse_log.py
examples/: CMakeLists.txt  cusick_sim.cpp  extruded_mesh_vis.cpp
render_scripts/: .polyscope.ini  bisect_mesh.py  cloth_on_sphere_render.py  cloth_on_sphere_render_single_frame.py  crash_ball_render.py  crash_ball_render_top_view.py  create_boundary_wireframe.py  create_video_from_sequence.py  crop_images_tool.py  crush_bellow_render.py  crush_can_render.py  crush_cone_render.py  crush_cone_render_cloth_mat.py  half_cylinder_render.py  half_cylinder_render_2nd_fem.py  half_torus_render.py  helix_render.py  imgui.ini  mesh_sequence_viewer.py  pin_flip_cloth_render.py  pin_flip_cloth_render_overview.py  png2jpg.py  popper_render.py  popper_render_single_frame.py  render_meshes_bt.py  render_meshes_with_shadows.py  setLight_sun_with_strength.py  setMat_doubleColorWire.py  setMat_doubleColor_with_wireframe_modifier.py  setMat_metal_wrapper.py  set_invisible_ground.py  setup_world.py  setup_world_background.py  sphere_render.py  twisted_cloth_render.py  twisted_cylinder_render.py  twisted_cylinder_render_single_frame.py  twisted_cylinder_render_sliced.py  vee_render.py
running_scipts/: README.md  config.example.sh  sequence_rendering.sh
